--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -18,6 +18,7 @@
     "mockjs": "^1.0.1-beta3",
     "postcss-pxtorem": "^4.0.1",
     "vant": "^1.3.9",
+    "vant-css": "^1.3.10",
     "vue": "^2.5.2",
     "vue-cropper": "^0.4.5",
     "vue-line-clamp": "^1.2.3",
