--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -15,13 +15,12 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "dom-to-image": "^2.6.0",
     "fetch-jsonp": "^1.1.3",
-    "html2canvas": "^1.0.0-alpha.12",
     "js-cookie": "^2.2.0",
     "mockjs": "^1.0.1-beta3",
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.3.2",
-    "rasterizehtml": "^1.3.0",
     "vant": "^1.4.8",
     "vue": "^2.5.19",
     "vue-amap": "^0.5.8",
