--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -23,7 +23,7 @@
     "js-cookie": "^2.2.0",
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.3.2",
-    "vant": "^1.6.6",
+    "vant": "^1.6.7",
     "vue": "^2.6.6",
     "vue-amap": "^0.5.8",
     "vue-cropper": "^0.4.5",
@@ -31,6 +31,7 @@
     "vue-photo-preview": "^1.1.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vue-skeleton-webpack-plugin": "^1.2.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -80,7 +81,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "2.9.1",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
