高德地图ID不能为空

--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -11,7 +11,8 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js",
-    "generate": "node build/generate.js"
+    "generate": "node build/generate.js",
+    "upload": "node build/build.js && gulp"
   },
   "dependencies": {
     "animate.css": "^3.7.0",
