--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -23,6 +23,7 @@
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.3.2",
     "vant": "^1.6.7",
+    "video-capture": "^1.0.1",
     "vue": "^2.6.6",
     "vue-amap": "^0.5.8",
     "vue-cropper": "^0.4.5",
