--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -31,6 +31,7 @@
     "vue-photo-preview": "^1.1.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.19.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
