--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -32,7 +32,8 @@
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.19.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
