--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -19,13 +19,13 @@
     "dom-to-image": "^2.6.0",
     "fetch-jsonp": "^1.1.3",
     "highlight.js": "^9.13.1",
-    "js-cookie": "^2.2.0",
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.3.2",
     "qs": "^6.7.0",
     "vant": "^1.6.14",
     "vue": "^2.6.9",
     "vue-amap": "^0.5.9",
+    "vue-cookie": "^1.1.4",
     "vue-cropper": "^0.4.9",
     "vue-line-clamp": "^1.2.3",
     "vue-photo-preview": "^1.1.3",
