--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.8.2",
     "dom-to-image": "^2.6.0",
     "fetch-jsonp": "^1.1.3",
     "highlight.js": "^9.13.1",
