--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -34,7 +34,7 @@
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.19.2",
     "vuex": "^3.0.1",
-    "weixin-js-sdk": "^1.4.0-test"
+    "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
