--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "dom-to-image": "^2.6.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.8.2",
-    "dom-to-image": "^2.6.0",
     "fetch-jsonp": "^1.1.3",
     "highlight.js": "^9.13.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "postcss-pxtorem": "^4.0.1",
     "qrcode": "^1.3.2",
     "qs": "^6.7.0",
