--- a/moonBook/package.json
+++ b/moonBook/package.json
@@ -27,6 +27,7 @@
     "vue-cookie": "^1.1.4",
     "vue-cropper": "^0.4.9",
     "vue-line-clamp": "^1.2.3",
+    "vue-lottie": "^0.2.1",
     "vue-photo-preview": "^1.1.3",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
